<resources>
    <string name="app_name" translatable="false">AppX</string>
    <string name="menu_settings_text">Ajustes</string>
    <string name="menu_aboutus_text">¿Quiénes Somos?</string>
    <string name="menu_admin_text">Opciones de Administrador</string>
    <string name="menu_profile_text">Perfil</string>
    <string name="menu_home_text">Inicio</string>
    <string name="menu_history_text">Historial</string>
    <string name="menu_visited_text">Visitados</string>
    <string name="menu_recomendations_text">Recomendaciones</string>
    <string name="menu_browser_text">Buscador</string>
    <string name="register_button_text">Registrarse</string>
    <string name="login_button_text">Login</string>
    <string name="app_login">Login</string>
    <string name="app_register">Registrarse</string>
    <string name="app_logout">Logout</string>
    <string name="app_list_user_admin">Lista de Usuarios</string>
    <string name="app_delete_user">Eliminar Usuario</string>
    <string name="app_delete_account">Borrar mi cuenta</string>
    <string name="app_user_name">Nombre de Usuario</string>
    <string name="app_user_new_pass">Nueva contraseña</string>
    <string name="app_user_repeat_pass2">Repite la nueva contraseña</string>
    <string name="app_user_actual_pass">Actual Contraseña</string>
    <string name="app_user_pass">Contraseña</string>
    <string name="app_user_pass2">Repite contraseña</string>
    <string name="app_user_email">E-mail</string>
    <string name="app_user_real_name">Nombre</string>
    <string name="app_user_surname">Apellidos</string>
    <string name="app_already_login"><u>¿Ya estás registrado? Inicia sesión aquí</u></string>
    <string name="app_new_login"><u>¿No tienes una cuenta? Registrate aquí</u></string>
    <string name="email_not_valid">Correo Electrónico Inválido</string>
    <string name="password_not_equal">Las contraseñas son distintas</string>
    <string name="password_not_equal_db">La contraseña no es igual a tu actual contraseña</string>
    <string name="empty_fields">Hay algún campo vacío</string>
    <string name="username_exists">El nombre de usuario ya existe</string>
    <string name="place_exists">El nombre del lugar ya existe</string>
    <string name="account_created">Cuenta creado con éxito</string>
    <string name="sign_in">Se ha iniciado la sesión</string>
    <string name="register_failed">Error al registrarse</string>
    <string name="modify_user_failed">Error al modificar el perfil</string>
    <string name="login_failed">Usuario o contraseña incorrectas</string>
    <string name="modify_user_text">Puedes modificar la foto, el e-mail y la contraseña</string>
    <string name="app_register_profile_image">Foto de perfil (Opcional)</string>
    <string name="profile_visited_places">Sitios Visitados</string>
    <string name="profile_fav">Sitios Favoritos</string>
    <string name="profile_city">Nombre</string>
    <string name="profile_delete_account_title">Borrar Cuenta</string>
    <string name="profile_delete_account_message">¿Estás seguro de borrar tu cuenta? Todos tus datos se perderán</string>
    <string name="alert_yes">Sí</string>
    <string name="alert_no">No</string>
    <string name="profile_delete_account_admin">Borrar Cuenta</string>
    <string name="user_profile_list">Perfil Usuario</string>
    <string name="place_default_type_place">Tipo de lugar</string>
    <string name="sort_ascending_username">Nombre de usuario A - Z</string>
    <string name="sort_descending_username">Nombre de usuario Z - A</string>
    <string name="sort_ascending_name">Nombre real A - Z</string>
    <string name="sort_descending_name">Nombre real Z - A</string>
    <string name="image_default_desc">Imagen del Lugar</string>
    <string name="love_icon_default_desc">Imagen de Favorito</string>
    <string name="star_icon_default_desc">Imagen de Valoración</string>
    <string name="place_default_desc">Descripción del Lugar</string>
    <string name="place_default_name">Nombre del Lugar</string>
    <string name="place_details_comment_title">Comentarios</string>
    <string name="place_details_send_rate_button">Enviar Valoración</string>
    <string name="see_more">Ver más</string>
    <string name="see_less">Ver menos</string>
    <string name="lorem_ipsu">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="place_details_rate_title">Valora este lugar</string>
    <string name="write_comment">Escribe una valoración del lugar</string>
    <string name="number">5</string>
    <string name="typeOfPlace">Tipo de lugar</string>
    <string name="typeOfPlaces">Tipo de lugares</string>
    <string name="add_place">Añadir Lugar</string>
    <string name="add_place_title">Añadir imagenes </string>
    <string name="add_place_coordinates">Pulsar el lugar donde se encuentra (Requerido)</string>
    <string name="modify_place">Modificar Lugar</string>
    <string name="modify_place_title">Cambiar imagenes </string>
    <string name="profile_delete_place">Borrar Lugar</string>
    <string name="profile_delete_place_message">¿Estás seguro de que quieres borrar el lugar?</string>
    <string name="search">Buscar</string>
    <string name="no_internet">No se pudieron obtener datos, inténtelo más tarde</string>
    <string name="tab_nearest">Cercanos</string>
    <string name="tab_rating">Mejor Valorados</string>
    <string name="tab_twitter">Populares</string>
    <string name="tab_category">Categorías</string>
    <string name="place_address_example">Calle Puerto Lorem de Ipsu Norte</string>
    <string name="delete_comment">Borrar</string>
    <string name="description">Descripción</string>
    <string name="geolocation">Geolocalización</string>
    <string name="delete_place">Borrar Lugar</string>
    <string name="app_user_date">Fecha de nacimiento</string>
    <string name="fecha_nacimiento">Añadir Fecha</string>
    <string name="gender_male">Hombre</string>
    <string name="gender_female">Mujer</string>
    <string name="gender">Género</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicG90aTk4IiwiYSI6ImNrbWdtaWIxbzI5YnYybnFsd2xjNmlpd28ifQ.xtXKbXA5FiIAGPoxeVa54g</string>
    <string name="tracking_enabled">Trackeo activado</string>
    <string name="tracking_already_enabled">El trackeo ya está activado</string>
    <string name="current_location">Loc actual</string>
    <string name="user_location_permission_explanation">Explicacion toast de onExplanationNeeded</string>
    <string name="user_location_permission_not_granted">No se han dado los permisos necesarios</string>
    <string name="mapbox_new_location">New Lat %s%n new Long %s</string>
    <string name="drawer_profile_name">Anónimo</string>
    <string name="menu_favourites_text">Favoritos</string>
    <string name="menu_nearest_text">Más Cercanos</string>
    <string name="add_recommendation">Enviar Recomendación</string>
    <string name="my_recommedations">Mis Recomendaciones</string>
    <string name="pending_recomendations">Recomendaciones Recibidas</string>
    <string name="pending_visited_menu_text">Añadir a Pendientes Por Visitar</string>
    <string name="pending_visited_text">Pendientes por Visitar</string>
    <string name="recom_text">Recomendar</string>
    <string name="sendRecButton_text">Enviar recomendación</string>
    <string name="move_map_instruction">Pulse en el mapa</string>
    <string name="location_picker_select_location_button_cancel">Cancelar</string>
    <string name="location_picker_select_location_button_select">Selecciona la localización</string>
    <string name="location_picker_place_name_result">Lugar: %1$s</string>
    <string name="location_picker_dropped_marker_snippet_no_results">Sin resultados</string>
    <string name="place_rate">Valoración</string>
    <string name="place_category">Categoría</string>
    <string name="recommendation_by">Este lugar te lo ha recomendado el usuario </string>
    <string name="recommendation_by_username">Anónimo</string>
    <string name="my_recommendation_text_part_1">Le has recomendado el lugar</string>
    <string name="my_recommendation_text_part_2">a</string>
    <string name="my_recommendation_text_state">aceptó la recomendación</string>
    <string name="my_recommendation_text_state_accept"> </string>
    <string name="my_recommendation_text_state_not"> no</string>
    <string name="my_recommendation_text_state_still">aún no se ha decidido</string>
    <string name="entire_place_name">Calle</string>
    <string name="not_assigned">Sin asignar</string>
    <string name="recommend_place_menu_text">Recomendar Lugar</string>
    <string name="friends_text">Amigos</string>
    <string name="account_options">Opciones de cuenta</string>
    <string name="admin_options">Administración</string>
    <string name="user_list">Lista de Usuarios</string>
    <string name="other">Otros</string>
    <string name="friend_list">Lista de Amigos</string>
    <string name="friend_request">Peticiones de Amistad</string>
    <string name="add_friend">Añadir Amigo</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Rechazar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_request_title">Añadir amigo</string>
    <string name="add_friend_text_help">Escribe el nombre de usuario de tu amigo para añadirlo a tus lista de amigos</string>
    <string name="friend_request_sent_success">Petición de Amigo enviado satisfactoriamente</string>
    <string name="friend_request_sent_fail">No se puedo enviar la petición de amistad, intentalo más tarde</string>
    <string name="delete_friend">Borrar amigo</string>
    <string name="no_results">Sin resultados</string>
    <string name="select_all">Seleccionar todo</string>
    <string name="send_recomendation">Enviar recomendación</string>
    <string name="saved_on_pending_visited_list">Guardado en la lista de lugares pendientes por visitar</string>
    <string name="saved_on_pending_visited_list_error">Se produjo un error, intentelo más tarde</string>
    <string name="ratings_text">Valoraciones</string>
    <string name="place_created_msg">Se ha creado el lugar</string>
    <string name="couldnt_create_place_msg">No se ha podido crear el lugar</string>
    <string name="get_categories_error">Error al cargar categorias</string>
    <string name="get_categories_ok">Se han cargado las categorias</string>
    <string name="delete_comment_failed_msg">Error al borrar comentario</string>
    <string name="delete_comment_ok_msg">Comentario borrado con exito</string>
    <string name="profile_delete_msg">Se ha eliminado el perfil seleccionado</string>
    <string name="error_msg">Algo ha ido mal...</string>
    <string name="recommendation_accepted">Se ha aceptado la recomendación</string>
    <string name="friend_request_not_accepted">Se ha rechazado la recomendación</string>
    <string name="friend_request_accepted">Se aceptó la solicitud de amigo</string>
    <string name="decline_friend_request">Se rechazó la solicitud de amigo de</string>
    <string name="friend_deleted_1">"Se borró a "</string>
    <string name="friend_deleted_2">de tu lista de amigos</string>
    <string name="place_modified">Se ha modificado el lugar</string>
    <string name="place_modified_failed">No se ha podido modificar el lugar</string>
    <string name="place_deleted_msg">Se ha eliminado el lugar</string>
    <string name="user_profile_deleted">Se ha eliminado el perfil</string>
    <string name="user_profile_modified">Se ha modificado el perfil con éxito</string>
</resources>