<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings_text" />

    <item android:title="@string/account_options">
        <menu>
            <item
                android:id="@+id/profileFragment"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_profile_text" />

            <item
                android:id="@+id/friendsFragment"
                android:icon="@drawable/ic_friends"
                android:title="@string/friends_text" />

            <item
                android:id="@+id/favouritesPlacesFragment"
                android:icon="@drawable/love_icon_24dp"
                android:title="@string/menu_favourites_text" />

            <item
                android:id="@+id/logOut"
                android:icon="@drawable/ic_baseline_admin_user_24"
                android:title="@string/app_logout" />

        </menu>
    </item>

    <item android:title="@string/admin_options">
        <menu>
            <item
                android:id="@+id/adminFragment"
                android:icon="@drawable/ic_baseline_admin_user_24"
                android:title="@string/user_list"
                android:visible="false" />

        </menu>

    </item>


    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_aboutus_text" />
        </menu>

    </item>

</menu>