<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings_text" />

    <item android:title="@string/account_options">
        <menu>
            <item
                android:id="@+id/loginFragment"
                android:icon="@drawable/ic_baseline_admin_user_24"
                android:title="@string/login_button_text"
                />
            <item
                android:id="@+id/registerFragment"
                android:icon="@drawable/ic_baseline_admin_user_24"
                android:title="@string/register_button_text"
                />

        </menu>
    </item>

    <!-- Invisible -->
    <item android:title="@string/admin_options"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/adminFragment"
                android:icon="@drawable/ic_baseline_admin_user_24"
                android:title="@string/user_list"
                android:visible="false" />

        </menu>

    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/aboutUsFragment"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/menu_aboutus_text" />
        </menu>

    </item>

</menu>