<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/modify_place_menu_button"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/modify_place"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete_place_menu_button"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete_place"
        app:showAsAction="always"/>

    <item
        android:id="@+id/pending_visited_menu_item"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/pending_visited_menu_text"
       />

    <item
        android:id="@+id/recommend_place_menu_item"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/recommend_place_menu_text"
        />

</menu>