<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="580dp"
    android:id="@+id/placeDetail_ScrollView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.place_details.PlaceDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/placeDetailsPicture"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:contentDescription="@string/image_default_desc"
                android:scaleType="fitXY"
                tools:src="@drawable/imagen_lugar_default" />

            <TextView
                android:id="@+id/tvPlaceDetailsName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_default_name"
                android:gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:textSize="20sp"

                />

            <LinearLayout
                android:layout_width="333dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/placeDetailsMapIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:contentDescription="@string/love_icon_default_desc"
                    android:src="@drawable/ic_baseline_map_24" />

                <ImageView
                    android:id="@+id/favDetailsImage"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginRight="90dp"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/love_icon_default_desc"
                    android:src="@drawable/love_icon_24dp"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/tvPlaceDetailsRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/placeDetailsStarImage"
                    android:layout_marginTop="4dp"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star_icon_default_desc"
                    android:src="@drawable/ic_baseline_star_rate_24"
                    app:tint="@color/start_rating" />


            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/placeDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:text="@string/lorem_ipsu" />

        <FrameLayout
            android:id="@+id/comments_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
